fixed bug on mobile

--- a/css/style.css
+++ b/css/style.css
@@ -25,7 +25,6 @@
 }
 
 html {
-  /* line-height: ; */
   font-family: 'Geist-Regular', Helvetica, arial, sans-serif;
   font-size: 1rem;
   color: white;
@@ -34,9 +33,8 @@ html {
   -moz-osx-font-smoothing: grayscale;
   background-color: var(--black);
   @media (min-width: 1024px) {
-     font-size: 80%;
+    font-size: 80%;
   }
-  
 }
 
 *,
@@ -184,8 +182,14 @@ button {
 }
 
 @keyframes dotdotdot {
-  0%, 49% { opacity: 0; }
-  50%, 100% { opacity: 1; }
+  0%,
+  49% {
+    opacity: 0;
+  }
+  50%,
+  100% {
+    opacity: 1;
+  }
 }
 
 .grid {
@@ -353,7 +357,7 @@ button {
     text-align: right;
     font-size: 1.5rem;
   }
-  
+
   @media (max-width: 700px) {
     font-size: 1rem;
   }
@@ -405,6 +409,7 @@ button {
 
   @media (max-width: 1024px) {
     gap: 1rem;
+    padding: 1.5rem 0;
   }
 
   @media (max-width: 370px) {
